# mu_basecore

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  BaseCore.mu.json  CISettings.py  CONTRIBUTING.md  Cargo.toml  CodeQlFilters.yml  CoreBuild.mu.json  FlattenDXECore.pptx  LICENSE  Makefile.toml  README.md  ReadMe.rst  ReadMe_FlattenDxeCore.md  Readme.md  Readme.rst  Repo.md  RepoDetails.md  SECURITY.md  Unaccepted Memory PI ECR.md  Unaccepted Memory UEFI ECR.md  azure-pipelines-pr-gate-linux.yml  azure-pipelines-pr-gate.yml  ci.mu.yaml  codecov.yml  cspell.json  edk2_core_path_env.json  gcc_aarch64_linux_ext_dep.json  gcc_arm_linux_ext_dep.json  pip-requirements.txt  pull_request_template.md  requirements.txt  rust-toolchain.toml  rustfmt.toml
.azure-pipelines/: Ubuntu-GCC5.yml  Windows-VS2019.yml
.azurepipelines/: BaseTools-Build-For-Publication.yml  BuildAndTest.yml  Matrix-Build-Job-Clang.yml  Matrix-Build-Job.yml  MuDevOpsSync.yml  MuDevOpsWrapper.yml  Ubuntu-CLANGPDB.yml  Ubuntu-GCC5.yml  Ubuntu-PatchCheck.yml  Windows-CLANGPDB.yml  Windows-VS.yml  Windows-VS2019.yml  Windows-VS2022.yml
.cargo/: config.toml
.config/: CredScanSuppressions.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  advanced-issue-labeler.yml  codecov.yml  dependabot.yml  pull_request_template.md  release-draft-config-n-1.yml  release-draft-config-n.yml  release-draft-config.yml
.pytool/: CISettings.py  Readme.md  readme.md
BaseTools/: .gitignore  BaseTools.ci.yaml  BuildEnv  Edk2ToolsBuild.py  SecurityFixes.yaml  azure-pipelines-basetools-build.yml  basetools_calling_path_env.json  basetools_calling_path_env.yaml  basetools_nix_path_env.json  basetools_path_env.json  basetools_path_env.yaml
CryptoPkg/: CryptoPkg.ci.yaml  CryptoPkg.dec  CryptoPkg.dsc  CryptoPkg.uni  CryptoPkgMbedTls.dsc  Readme.md  SecurityFixes.yaml  SharedCrypto.BuildRules.fdf.inc
Docs/: feature_memory_protection.md  rust_build.md
MdeModulePkg/: MdeModulePkg.ci.yaml  MdeModulePkg.dec  MdeModulePkg.dsc  MdeModulePkg.mu.json  MdeModulePkg.mu.yaml  MdeModulePkg.uni  MdeModulePkgUnitTest.dsc  SecurityFixes.yaml
MdePkg/: MdeLibs.dsc.inc  MdePkg.ci.yaml  MdePkg.dec  MdePkg.dsc  MdePkg.mu.json  MdePkg.mu.yaml  UefiHostTestBuildOption.dsc
MsUnitTestPkg/: MsUnitTestPkg.ci.yaml  MsUnitTestPkg.dec  MsUnitTestPkg.mu.json  MsUnitTestPkg.mu.yaml  ReadMe.md
NetworkPkg/: Network.dsc.inc  NetworkPkg.ci.yaml  NetworkPkg.dec  NetworkPkg.dsc  NetworkPkg.mu.json  NetworkPkg.mu.yaml  NetworkPkg.uni  SecurityFixes.yaml  SharedNetworkPkg.dsc  SharedNetworkPkg.dsc.lol  SharedNetworkPkg.fdf  SharedNetworking.fdf.inc  mkdocs_redirects.yml
PcAtChipsetPkg/: PcAtChipsetPkg.ci.yaml  PcAtChipsetPkg.dec  PcAtChipsetPkg.dsc  PcAtChipsetPkg.mu.json
PerformancePkg/: PerformancePkg.dec  PerformancePkg.dsc  PerformancePkg.mu.json
PolicyServicePkg/: PolicyServicePkg.ci.yaml  PolicyServicePkg.dec  PolicyServicePkg.dsc  README.md
RustPkg/: Readme.md  RustPkg.dsc  RustPkg.fdf
RustPkg/Test/HelloWorld/: Cargo.toml  HelloWorld.inf
RustPkg/Test/HelloWorld/src/: main.rs
RustPkg/Test/HelloWorld2/: Cargo.toml  HelloWorld2.inf
RustPkg/Test/HelloWorld2/src/: lib.rs
RustPkg/Test/TestRustLangApp/: Cargo.toml  TestRustLangApp.inf
RustPkg/Test/TestRustLangApp/src/: main.rs  mem.rs
RustPkg/Test/TestRustLangLib/: Cargo.toml
RustPkg/Test/TestRustLangLib/src/: lib.rs
SecurityPkg/: SecurityPkg.ci.yaml  SecurityPkg.dec  SecurityPkg.dsc  SecurityPkg.mu.json  SecurityPkg.mu.yaml
ShellPkg/: ShellPkg.ci.yaml  ShellPkg.dec  ShellPkg.dsc
StandaloneMmPkg/: StandaloneMmPkg.ci.yaml  StandaloneMmPkg.dec  StandaloneMmPkg.dsc
examples/: brotli.rs
(+1318 files in other folders)
