[package]
name = "hello_world_lib"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com"]
edition = "2018"

[lib]
name = "hello_world_lib"
crate-type = ["staticlib"]

# example from r-efi.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies]
r-efi = { path = "../../External/r-efi"}
