[package]
name = "test_rust_lang_app"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
r-efi = { path = "../../External/r-efi" }
uefi_rust_intrinsic_lib = { path = "../../Library/UefiRustIntrinsicLib" }
uefi_rust_panic_lib = { path = "../../Library/UefiRustPanicLib" }
uefi_rust_allocation_lib = { path = "../../Library/UefiRustAllocationLib" }
test_rust_lang_lib = { path = "../TestRustLangLib" }
