[package]
name = "test_rust_lang_lib"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test_rust_lang_lib"
#crate-type = ["rlib"]
crate-type = ["rlib", "staticlib"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
overflow-checks = true

[dependencies]
r-efi = { path = "../../External/r-efi"}
uefi_rust_panic_lib = { path = "../../Library/UefiRustPanicLib" }
uefi_rust_allocation_lib = { path = "../../Library/UefiRustAllocationLib" }
